objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Component Distribution</fullName>
        <description>Used by Component Distribution as they do not use Leads for unqualified leads.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Develop Value Proposition</fullName>
        </values>
        <values>
            <fullName>Evaluate Solution</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Qualified Lead</fullName>
        </values>
        <values>
            <fullName>Quote and Negotiate</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Substituted</fullName>
        </values>
        <values>
            <fullName>Understand and Define</fullName>
        </values>
        <values>
            <fullName>Unqualified Lead</fullName>
        </values>
        <values>
            <fullName>Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Filtrona</fullName>
        <description>Filtrona default sales process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Develop Value Proposition</fullName>
        </values>
        <values>
            <fullName>Evaluate Solution</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Qualified Lead</fullName>
        </values>
        <values>
            <fullName>Quote and Negotiate</fullName>
        </values>
        <values>
            <fullName>Substituted</fullName>
        </values>
        <values>
            <fullName>Understand and Define</fullName>
        </values>
        <values>
            <fullName>Won</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_CSR__c</fullName>
        <formula>Account.CSR__r.FirstName &amp; &quot; &quot;  &amp; Account.CSR__r.LastName</formula>
        <label>Account CSR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Needs_Verification__c</fullName>
        <formula>IF( 
AND( 
OR(Business_Area__r.MDM_External_Id__c = &apos;FIL&apos;, Business_Area__r.MDM_External_Id__c = &apos;CSP&apos;), Account.Know_your_customer_completed__c = FALSE),&apos;YES&apos;,&apos;NO&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a calculated field that is only relevant for Filters and C&amp;SP. This will be set to YES if the Account Know your customer verified is not set.</inlineHelpText>
        <label>Account Needs Verification?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the Account Needs Verification? flag is set to YES, then set this flag when the account is verified.</inlineHelpText>
        <label>Account Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acknowledged_Approval_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please tick this box to confirm you have considered and acknowledge compliance with the internal approval process.</inlineHelpText>
        <label>Acknowledged Approval Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agree_Requirement_Definition_Task__c</fullName>
        <inlineHelpText>Create this task to track the requirement definition with the client. Its has to perform when opportunity probability is - 20%</inlineHelpText>
        <label>2. Agree Requirement Definition?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Allow_Fastrack_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Fastrack Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_this_year__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount this year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_year_three__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount year three</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_year_two__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount year two</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Commercial_Proposal__c</fullName>
        <label>Approval Commercial Proposal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Compliance_certification__c</fullName>
        <label>Approval Compliance certification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Full_Production_Plan__c</fullName>
        <label>Approval Full Production Plan</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Graphical_design__c</fullName>
        <label>Approval Graphical design</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Innovation_council__c</fullName>
        <label>Approval Innovation council</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Know_your_customer__c</fullName>
        <label>Approval Know your customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Legal_and_NDA__c</fullName>
        <label>Approval Legal and NDA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Requirement_definition__c</fullName>
        <label>Approval Requirement definition</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Sample_by_Customer__c</fullName>
        <label>Approval Sample by Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Solution_cost_estimate__c</fullName>
        <label>Approval Solution cost estimate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Solution_specification__c</fullName>
        <label>Approval Solution specification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Supply_chain_validation__c</fullName>
        <label>Approval Supply chain validation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Technical_Solution_Timeframes__c</fullName>
        <label>Approval Technical Solution Timeframes</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Trial_Product_Production__c</fullName>
        <label>Approval Trial Product Production</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Value_proposition__c</fullName>
        <label>Approval Value proposition</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Area_OLD__c</fullName>
        <description>Enter business area for this opportunity</description>
        <inlineHelpText>Enter business area for this opportunity</inlineHelpText>
        <label>Business Area OLD</label>
        <picklist>
            <picklistValues>
                <fullName>Enitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filtrona Filters and Scientific Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filtrona Porous Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payne Security AIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payne Packaging Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipe Protection Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speciality Tapes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Area__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Business Area</label>
        <referenceTo>Business_Area__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Remember to also add the CSR to the Opportunity (or Account) team. Otherwise the CSR may not have access to this record.</inlineHelpText>
        <label>Opportunity CSR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confirmed_Con_counterfeiter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to confirm that you have considered counterfeit implications for this opportunity</description>
        <label>Confirmed Non-Counterfeiter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Considered_Counterfeit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to confirm that you have considered counterfeit implications for this opportunity</description>
        <label>Considered Counterfeit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contribution_margin__c</fullName>
        <label>Contribution margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_margin_percentage__c</fullName>
        <label>Cost margin percentage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Create_Sample_Task_Optional__c</fullName>
        <inlineHelpText>Create this task to track Sample Creation for clients. If no samples are required, still create this task and confirm requirement. Its has to perform when opportunity probability is - 70%</inlineHelpText>
        <label>Create Sample? (Optional)</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Create_Value_Proposition_Task__c</fullName>
        <inlineHelpText>Create this task to track the creation of the customer value proposition for this opportunity. This task is require when opportunity stage is - 50%.</inlineHelpText>
        <label>3. Create Value Proposition?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Creation_of_Solution_Cost_Estimate_Task__c</fullName>
        <inlineHelpText>Create this task to track creation of the solution cost estimate. Its has to perform when opportunity probability is - 70%</inlineHelpText>
        <label>5. Creation of Solution Cost Estimate?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Competitor A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Sample_Approved_by_Customer__c</fullName>
        <label>Date Sample Approved by Customer</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Final_Product_Solution_Spec_Task__c</fullName>
        <inlineHelpText>Create this task to track the creation of the internal solution specification. Its has to perform when opportunity probability is - 70%</inlineHelpText>
        <label>4. Final Product Solution Spec?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fixed_Development_Cost__c</fullName>
        <label>Fixed Development Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Graphical_solution_design_Task_Optional__c</fullName>
        <inlineHelpText>Create this task to track graphic design creation for Portfolio and Innovation products - only for Packaging solutions. Its has to perform when opportunity probability is - 70%</inlineHelpText>
        <label>Graphical solu design? (Optional)</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gross_Margin_Percentage__c</fullName>
        <label>Gross Margin Percentage</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_margin__c</fullName>
        <formula>if(AND(Amount &gt; 0, Gross_Margin_Percentage__c &gt;0),Amount * Gross_Margin_Percentage__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Innovation_Design_Req_Task_Optional__c</fullName>
        <inlineHelpText>Create this task to track engagement for innovation/design opportunities. Its has to perform when opportunity probability is - 20%</inlineHelpText>
        <label>Innovation / Design Req? (Optional)</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Record_Type_Name__c</fullName>
        <description>Used for validation rules</description>
        <label>Internal Record Type Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSameDivision__c</fullName>
        <formula>Business_Area__c  =  Account.Business_Area__c</formula>
        <label>IsSameDivision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Know_your_customer__c</fullName>
        <inlineHelpText>Complete evaluation to determine if ‘know-your-customer’ protocol is required? If required, appropriate review has been completed to confirm ability to trade with this customer. Its has to be perform when opportunity probability is - 20%</inlineHelpText>
        <label>1. Know your customer?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_NDA_Approval_Task_Optional__c</fullName>
        <inlineHelpText>Create this task to track Legal / NDA approval for this opportunity. Its has to perform when opportunity probability is - 20%</inlineHelpText>
        <label>Legal / NDA Approval? (Optional)</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Life_Time__c</fullName>
        <inlineHelpText>Number of Years that the customer is expected to want the Product.</inlineHelpText>
        <label>Life Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturing Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Category__c</fullName>
        <label>Market Category</label>
        <picklist>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tobacco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Drink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Identity Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic &amp; Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Personal Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper, board and Point of Sale</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <displayFormat>OPP{000000}</displayFormat>
        <inlineHelpText>Auto-generated number that is primarily required by Distribution to track Opportunities.</inlineHelpText>
        <label>Opportunity Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Count__c</fullName>
        <label>Opportunity Product Count</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Owners_Region__c</fullName>
        <formula>text(Owner.DB_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owners Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Costs_Thousand__c</fullName>
        <inlineHelpText>Used by Distribution</inlineHelpText>
        <label>Purchase Costs/ Thousand</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarter_1__c</fullName>
        <formula>Revenue_month_1__c + Revenue_month_2__c + Revenue_month_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarter_2__c</fullName>
        <formula>Revenue_month_4__c + Revenue_month_5__c + Revenue_month_6__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarter_3__c</fullName>
        <formula>Revenue_month_7__c + Revenue_month_8__c + Revenue_month_9__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <inlineHelpText>Used by Distribution for users to manually add the number of the Quote that was created in MSS.</inlineHelpText>
        <label>Quote Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Won_Lost_Opp__c</fullName>
        <label>Reason for Won / Lost Opp</label>
        <picklist>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing Footprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Dead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Won_Lost_Opp_in_Details__c</fullName>
        <inlineHelpText>Please enter the reason in details for won / lost of the opportunities.</inlineHelpText>
        <label>Reason for Won / Lost Opp in Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_months_this_year__c</fullName>
        <formula>(12-month(today()))+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining months this year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requires_Know_Your_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field set by workflow rules to determine if know your customer logic is required</description>
        <label>Requires Know Your Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revenue_Year_1__c</fullName>
        <label>Revenue Year + 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Year_2__c</fullName>
        <label>Revenue Year + 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_month_10__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Revenue month 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_month_11__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Revenue month 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_month_12__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Revenue month 12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <formula>Business_Area__r.SBU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <picklist>
            <controllingField>Market_Category__c</controllingField>
            <picklistValues>
                <fullName>Clean Rooms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filter Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floors &amp; Stairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glazing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Bodies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphics &amp; Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greenhouses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Beauty Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heating, Ventilation &amp; Climate Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horticultural Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Identification &amp; Entitlement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lighting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquid Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Make Your Own Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing OEMs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing White Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Device Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal &amp; Metalwork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Woven</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Furniture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Count_Trial_Run__c</fullName>
        <label>Task Count Trial Run</label>
        <summaryFilterItems>
            <field>Opportunity_Task__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Trial Product Production Run</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Task__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Task_Count_solution_specification__c</fullName>
        <label>Task Count solution specification</label>
        <summaryFilterItems>
            <field>Opportunity_Task__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Create solution specification</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Task__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tech_Solu_Timeframe_Task_Optional__c</fullName>
        <inlineHelpText>Create this task to track technical solution timeframes for innovation products. Its has to perform when opportunity probability is - 50%</inlineHelpText>
        <label>Tech Solu Timeframe? (Optional)</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical_Probability__c</fullName>
        <label>Technical Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Today_3__c</fullName>
        <formula>TODAY () + 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today + 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tooling_Costs__c</fullName>
        <inlineHelpText>Used be Distribution to capture the tooling setup costs</inlineHelpText>
        <label>Tooling Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Opportuntity_Margin__c</fullName>
        <formula>Total_Revenue__c  -  (Cost_margin_percentage__c  *  Total_Revenue__c) -  Fixed_Development_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Opportuntity Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Revenue__c</fullName>
        <formula>Revenue_month_1__c  +
 Revenue_month_2__c  +
 Revenue_month_3__c  +
 Revenue_month_4__c  +
 Revenue_month_5__c  +
 Revenue_month_6__c  +
 Revenue_month_7__c  +
 Revenue_month_8__c  +
 Revenue_month_9__c  +
 Revenue_month_10__c  +
 Revenue_month_11__c  +
 Revenue_month_12__c  +
 Amount_year_two__c +
 Amount_year_three__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transfer_Price__c</fullName>
        <label>Transfer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trial_and_Internal_Planning_Task__c</fullName>
        <inlineHelpText>Create this task to confirm customer trial acceptance (if relevant) and internal production approval to meet the product requirements. Its has to perform when opportunity probability is - 90%</inlineHelpText>
        <label>6. Trial and Internal Planning?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ultimate_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ultimate Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Winning_Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Winning Competitor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Winning Competitor)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>